tests/vertical-slice/reject/out_of_scope_type_param_trait_sig.hew
// Reject fixture: out_of_scope_type_param_trait_sig — a type-parameter name is
// in scope only for the item that declares it. `id` declares `<T>`, so `T` is
// valid inside `id`. The trait method signature `bad` declares no type params,
// and the trait `Foo` is not generic, so its `x: T` names a type that is out of
// scope. The checker must report it at the annotation with `unknown type `T``,
// rather than exempt it merely because `id` declares a `T` somewhere
// program-wide and leak an opaque `Ty::named("T")`.
//
// Companion to out_of_scope_type_param (free fn): proves the scope-aware
// exemption holds on the trait method-signature path.
//
// Harness verb: hew check
// Expected: rejected with `unknown type `T`` at `bad`'s parameter annotation.
fn id<T>(x: T) -> T { x }

trait Foo {
    fn bad(self, x: T) -> i64;
}

fn main() -> i64 { 0 }
